--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,7 +34,7 @@ economy:
 # DATABASE SETTINGS
 # ========================================
 database:
-  type: "file" # file, sqlite, mysql
+  type: "sqlite" # sqlite, mysql, file
   mysql:
     host: "localhost"
     port: 3306
